// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/ColorManager default 1`] = `
Array [
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "blue",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="blue"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abc"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcd",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abcd"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abcdef"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#aabbccdd",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#aabbccdd"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgb(50, 100, 150)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="rgb(50, 100, 150)"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgba(50, 100, 150, .5)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="rgba(50, 100, 150, .5)"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots components/Color/ColorManager interactive 1`] = `
<div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
  <p
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <label>
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
        
      <span>
        Show Buttons?
      </span>
    </label>
  </p>
</div>
`;

exports[`Storyshots components/Color/ColorManager invalid colors 1`] = `
Array [
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="elastic"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#xyz"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#ghij"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#canvas"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#12345xyz"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="rgb(a,b,c)"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="rgba(w,x,y,z)"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots components/Color/ColorManager with buttons 1`] = `
Array [
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abcdef"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abcdef"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>,
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="strings.getCodePlaceholder()"
            type="text"
            value="#abcdef"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>,
]
`;
